# src/swagger.json
@@ -200,6 +200,29 @@
         }
       }
     },
+    "/products/disabled": {
+      "get": {
+        "summary": "All the products disabled",
+        "description": "Returns list of registered disabled products",
+        "tags": ["Products"],
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Product"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/category/product": {
       "get": {
         "summary": "Return the product",
